@@ -1,6 +1,7 @@
 v1.10.1 (Expected around 2024-11-01)
 ====================
 
+- Propagate general plotting keywords in Potential.plot/plotPotentials.
 
 v1.10.0 (2024-07-07)
 ====================
